# evnchw.github.io

./: .gitignore  Makefile  README.md  _config.yml  pyproject.toml
_data/: navigation.yml
_drafts/: 20240901_mfg_master_equation_part_2.md
_includes/: archive-single.html
_notes/: 20240804_qin_2021_attacking.md  20240804_werner_2022_sok.md  20240804_zetzsche_2020_decentralized_finance.md  20240805_karim_2022_examining.md  20240805_xu_2022_sok.md  template.txt
_notes/papers/: 20240803_chen_2020_blockchain_disruption.md  20240803_schar_2021_decentralized_finance.md  20240805_xu_2022_sok.md
_notes/research_ideas/: 20240807_uniswap_incentive_design.md  defi.md
_pages/: about.md  cv.md  markdown.md  music.md  notes.md  other.md  publications.md  quant.md  teaching.html
_publications/: US20230418735A1.md  chow_2016.md  chow_2019.md  xie_et_al_2020.md
_quant/: 20240620_mfg.md  20240623_refresher_hjb.md  20240630_refresher_fokker_planck.md  20240630_refresher_hjb.md  20240721_refresher_fokker_planck.md  20240723_refresher_fokker_planck.md  20240806_literature_survey_defi.md  20240810_literature_survey_defi.md  20240817_cardaliguet_and_lehalle_2017.md  20240818_mfg_master_equation.md  20240818_mfg_trading.md  20240819_cardaliguet_and_lehalle_2017.md  20240825_mfg_master_equation_part_1.md  20240901_mfg_master_equation_part_2.md  convert_inline_latex_for_web.py  cryptomicrostructure_20240519.md  introduction.md  mfg_part_1.md  refresher_hjb.md
_sass/: _variables.scss
_teaching/: 2014-spring-teaching-1.md  20240623_academia_industry_partnerships.md
(+22 files in other folders)
