[tool.poetry]
name = "evnchw-github-io"
version = "0.1.0"
description = "The research and development site of Evan Chow."
authors = ["Evan Chow <echow@alumni.princeton.edu>"]
readme = "README.md"
packages = [{include = "evnchw"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
